--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="#Mis-trabajos">Jobs</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link"  href="portfolio.html" target="_blank">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#Contacto">Contact</a>
                     </li>
                 </ul>
