fix: idioma y parrafo Hero-Section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -51,7 +51,7 @@
                     My Job <br> Train Driver
                 </h1>
                 <p class="my-5">
-                    Experienced in Trains Driver with 7 years of experience. Collaborates with Traffic Staff and other team members to keep underground transit operating safely and on time. Helping in the best way in emergencies and keeping passengers safe at all times to keeping public transportation reliable.
+                    Seven years of experience as a train driver. Collaborates with Traffic Staff and other team members to keep underground transit operating safely and on time. Helping in the best way in emergencies and keeping passengers safe at all times to keeping public transportation reliable.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-primary text-light me-4">
